Agent's creation (with tools) 2025

--- a/02-prompts.ipynb
+++ b/02-prompts.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7ca88ca7",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "5008bf3a",
    "metadata": {},
    "outputs": [
@@ -225,9 +225,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "System: What is the capital of France?\n",
+      "Human: What is the capital of France?\n",
       "AI: The capital of France is Paris.\n",
-      "System: Who wrote 'To Kill a Mockingbird'?\n",
+      "Human: Who wrote 'To Kill a Mockingbird'?\n",
       "AI: 'To Kill a Mockingbird' was written by Harper Lee.\n"
      ]
     }
@@ -242,6 +242,358 @@
     "\n",
     "print(few_shot_prompt.format())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1fdebabf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Overview of LangChain**\n",
+      "========================\n",
+      "\n",
+      "LangChain is a framework that enables the development of applications powered by language models. It provides a set of tools and libraries to build various types of applications.\n",
+      "\n",
+      "### Key Use Cases\n",
+      "\n",
+      "*   **Chatbots**: LangChain can be used to build conversational interfaces, enabling users to interact with applications through natural language.\n",
+      "*   **Generative Question-Answering (GQA)**: The framework allows developers to create systems that generate questions and answers based on a given prompt or context.\n",
+      "*   **Summarization**: LangChain can be utilized for text summarization tasks, such as condensing long documents into concise summaries.\n",
+      "\n",
+      "### Other Applications\n",
+      "\n",
+      "*   **Content Generation**: LangChain can be used to generate content, such as articles, social media posts, or product descriptions.\n",
+      "*   **Language Translation**: The framework provides tools for building language translation systems that can translate text from one language to another.\n",
+      "*   **Text Classification**: LangChain enables developers to build systems that classify text into predefined categories.\n",
+      "\n",
+      "### Summary\n",
+      "\n",
+      "LangChain is a versatile framework that can be used to develop a wide range of applications powered by language models. Its key use cases include chatbots, GQA, summarization, content generation, language translation, and text classification.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_system_prompt = \"\"\"\n",
+    "Answer the user's query based on the context below.                 \n",
+    "If you cannot answer the question using the\n",
+    "provided information answer with \"I don't know\".\n",
+    "\n",
+    "Always answer in markdown format. When doing so please\n",
+    "provide headers, short summaries, follow with bullet\n",
+    "points, then conclude.\n",
+    "\n",
+    "Context: {context}\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt_template.messages[0].prompt.template = new_system_prompt\n",
+    "\n",
+    "out = pipeline.invoke({\"context\": context, \"query\": query}).content\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3fa38870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples = [\n",
+    "    {\n",
+    "        \"input\": \"Can you explain gravity?\",\n",
+    "        \"output\": (\n",
+    "            \"## Gravity\\n\\n\"\n",
+    "            \"Gravity is one of the fundamental forces in the universe.\\n\\n\"\n",
+    "            \"### Discovery\\n\\n\"\n",
+    "            \"* Gravity was first discovered by Sir Isaac Newton in the late 17th century.\\n\"\n",
+    "            \"* It was said that Newton theorized about gravity after seeing an apple fall from a tree.\\n\\n\"\n",
+    "            \"### In General Relativity\\n\\n\"\n",
+    "            \"* Gravity is described as the curvature of spacetime.\\n\"\n",
+    "            \"* The more massive an object is, the more it curves spacetime.\\n\"\n",
+    "            \"* This curvature is what causes objects to fall towards each other.\\n\\n\"\n",
+    "            \"### Gravitons\\n\\n\"\n",
+    "            \"* Gravitons are hypothetical particles that mediate the force of gravity.\\n\"\n",
+    "            \"* They have not yet been detected.\\n\\n\"\n",
+    "            \"**To conclude**, Gravity is a fascinating topic and has been studied extensively since the time of Newton.\\n\\n\"\n",
+    "        )\n",
+    "    },\n",
+    "    {\n",
+    "        \"input\": \"What is the capital of France?\",\n",
+    "        \"output\": (\n",
+    "            \"## France\\n\\n\"\n",
+    "            \"The capital of France is Paris.\\n\\n\"\n",
+    "            \"### Origins\\n\\n\"\n",
+    "            \"* The name Paris comes from the Latin word \\\"Parisini\\\" which referred to a Celtic people living in the area.\\n\"\n",
+    "            \"* The Romans named the city Lutetia, which means \\\"the place where the river turns\\\".\\n\"\n",
+    "            \"* The city was renamed Paris in the 3rd century BC by the Celtic-speaking Parisii tribe.\\n\\n\"\n",
+    "            \"**To conclude**, Paris is highly regarded as one of the most beautiful cities in the world and is one of the world's greatest cultural and economic centres.\\n\\n\"\n",
+    "        )\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dad4065b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
+    "    examples=examples,\n",
+    "    example_prompt=example_prompt,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f8317a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Human: Can you explain gravity?\n",
+       "AI: ## Gravity\n",
+       "\n",
+       "Gravity is one of the fundamental forces in the universe.\n",
+       "\n",
+       "### Discovery\n",
+       "\n",
+       "* Gravity was first discovered by Sir Isaac Newton in the late 17th century.\n",
+       "* It was said that Newton theorized about gravity after seeing an apple fall from a tree.\n",
+       "\n",
+       "### In General Relativity\n",
+       "\n",
+       "* Gravity is described as the curvature of spacetime.\n",
+       "* The more massive an object is, the more it curves spacetime.\n",
+       "* This curvature is what causes objects to fall towards each other.\n",
+       "\n",
+       "### Gravitons\n",
+       "\n",
+       "* Gravitons are hypothetical particles that mediate the force of gravity.\n",
+       "* They have not yet been detected.\n",
+       "\n",
+       "**To conclude**, Gravity is a fascinating topic and has been studied extensively since the time of Newton.\n",
+       "\n",
+       "\n",
+       "Human: What is the capital of France?\n",
+       "AI: ## France\n",
+       "\n",
+       "The capital of France is Paris.\n",
+       "\n",
+       "### Origins\n",
+       "\n",
+       "* The name Paris comes from the Latin word \"Parisini\" which referred to a Celtic people living in the area.\n",
+       "* The Romans named the city Lutetia, which means \"the place where the river turns\".\n",
+       "* The city was renamed Paris in the 3rd century BC by the Celtic-speaking Parisii tribe.\n",
+       "\n",
+       "**To conclude**, Paris is highly regarded as one of the most beautiful cities in the world and is one of the world's greatest cultural and economic centres.\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "out = few_shot_prompt.format()\n",
+    "display(Markdown(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e542c464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", new_system_prompt),\n",
+    "    few_shot_prompt,\n",
+    "    (\"user\", \"{query}\"),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2b034472",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## LangChain\n",
+       "\n",
+       "LangChain is a framework for developing applications powered by language models.\n",
+       "\n",
+       "### Applications\n",
+       "\n",
+       "* **Chatbots**: LangChain can be used to build conversational interfaces that use natural language processing (NLP) and machine learning.\n",
+       "* **Generative Question-Answering (GQA)**: LangChain enables the creation of AI systems that can answer questions based on their understanding of a given text or context.\n",
+       "* **Summarization**: LangChain can be used to summarize long pieces of text into shorter, more digestible versions.\n",
+       "\n",
+       "### Key Features\n",
+       "\n",
+       "* **Modular Architecture**: LangChain's modular design allows developers to easily integrate different components and tools into their applications.\n",
+       "* **Language Model Integration**: LangChain provides a simple way to integrate language models into applications, making it easy to build AI-powered interfaces.\n",
+       "* **Extensive Library of Tools**: LangChain comes with an extensive library of tools and pre-built components that can be used to speed up development.\n",
+       "\n",
+       "**To conclude**, LangChain is a powerful framework for building AI-powered applications that use language models."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pipeline = prompt_template | llm\n",
+    "out = pipeline.invoke({\"context\": context, \"query\": query}).content\n",
+    "display(Markdown(out))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34167f6b",
+   "metadata": {},
+   "source": [
+    "Chain of Thought Prompting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "68beb4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test LLM without Chain of Thought prompting\n",
+    "simple_prompt = \"\"\"\n",
+    "Be a helpful assistant and answer the user's question.\n",
+    "\n",
+    "You MUST answer the question directly without any other\n",
+    "text or explanation.\n",
+    "\"\"\"\n",
+    "\n",
+    "simple_prompt_template = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", simple_prompt),\n",
+    "    (\"user\", \"{query}\"),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "299bc28e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = (\n",
+    "    \"James has 7 apples, he eats 4 and is given an additional 19 apples, \"\n",
+    "    \"James gives 15 apples to Josh, and Josh gives James 2 apples, how \"\n",
+    "    \"many apples does James have?\" \n",
+    ")\n",
+    "\n",
+    "simple_pipeline = simple_prompt_template | llm\n",
+    "simple_out = simple_pipeline.invoke({\"query\": query}).content\n",
+    "print(simple_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "aa4efe2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "To solve this problem, we need to break it down into smaller subproblems. Here are the steps:\n",
+       "\n",
+       "**Subproblem 1: Initial number of apples**\n",
+       "James starts with 7 apples.\n",
+       "\n",
+       "**Subproblem 2: Apples eaten by James**\n",
+       "James eats 4 apples, so he now has:\n",
+       "7 - 4 = 3 apples\n",
+       "\n",
+       "**Subproblem 3: Additional apples given to James**\n",
+       "James is given an additional 19 apples, so he now has:\n",
+       "3 + 19 = 22 apples\n",
+       "\n",
+       "**Subproblem 4: Apples given by Josh to James**\n",
+       "Josh gives James 2 apples, so James now has:\n",
+       "22 + 2 = 24 apples\n",
+       "\n",
+       "**Subproblem 5: Apples given by James to Josh**\n",
+       "James gives 15 apples to Josh, so he now has:\n",
+       "24 - 15 = 9 apples\n",
+       "\n",
+       "Therefore, after all the transactions, James has **9 apples**."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cot_system_prompt = \"\"\"\n",
+    "Be a helpful assistant and answer the user's question.\n",
+    "\n",
+    "To answer the question, you must:\n",
+    "\n",
+    "- List systematically and in precise detail all\n",
+    "  subproblems that need to be solved to answer the\n",
+    "  question.\n",
+    "- Solve each sub problem INDIVIDUALLY and in sequence.\n",
+    "- Finally, use everything you have worked through to\n",
+    "  provide the final answer.\n",
+    "\n",
+    "Context: {context}\n",
+    "\"\"\"\n",
+    "\n",
+    "cot_prompt_template = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", cot_system_prompt),\n",
+    "    (\"user\", \"{query}\"),\n",
+    "])\n",
+    "\n",
+    "cot_pipeline = cot_prompt_template | llm\n",
+    "cot_out = cot_pipeline.invoke({\"context\": context, \"query\": query}).content\n",
+    "display(Markdown(cot_out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27043b83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
