--- a/04-agents-intro.ipynb
+++ b/04-agents-intro.ipynb
@@ -325,6 +325,241 @@
     "for message in result2[\"messages\"]:\n",
     "    print(message)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68506a6f",
+   "metadata": {},
+   "source": [
+    "2. Create Agent with RunnableSerializable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "13bec317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "FEW_SHOT_EXAMPLES = [\n",
+    "    (\"human\", \"What is 7 multiplied by 6?\"),\n",
+    "    (\"ai\",\n",
+    "     \"\"\"<tool_call>\n",
+    "{{\"name\": \"multiply\", \"args\": {{\"a\": 7, \"b\": 6}}}}\n",
+    "</tool_call>\"\"\"\n",
+    "    ),\n",
+    "    (\"ai\", \"TOOL_RESULT: 42\"),\n",
+    "    (\"ai\", \"The result is 42.\"),\n",
+    "\n",
+    "    (\"human\", \"Add 5 and 11.\"),\n",
+    "    (\"ai\",\n",
+    "     \"\"\"<tool_call>\n",
+    "{{\"name\": \"add\", \"args\": {{\"a\": 5, \"b\": 11}}}}\n",
+    "</tool_call>\"\"\"\n",
+    "    ),\n",
+    "    (\"ai\", \"TOOL_RESULT: 16\"),\n",
+    "    (\"ai\", \"The sum is 16.\"),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "prompt_serializable = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\n",
+    "     \"You are a precise tool-using assistant. \"\n",
+    "     \"When answering math questions, ALWAYS call a tool. \"\n",
+    "     \"Follow the exact JSON tool-call format shown in the examples.\"\n",
+    "    ),\n",
+    "    *FEW_SHOT_EXAMPLES,\n",
+    "    MessagesPlaceholder(variable_name=\"chat_history\"),\n",
+    "    (\"human\", \"{input}\"),\n",
+    "    (\"ai\", \"Scratchpad: {agent_scratchpad}\"),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "cad57ded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.runnables.base import RunnableSerializable\n",
+    "\n",
+    "#define agent serializable\n",
+    "agent_serializable: RunnableSerializable = (\n",
+    "    {\n",
+    "        \"input\": lambda x: x[\"input\"],\n",
+    "        \"chat_history\": lambda x: x[\"chat_history\"],\n",
+    "        \"agent_scratchpad\": lambda x: x.get(\"agent_scratchpad\", \"\"),\n",
+    "    }\n",
+    "    | prompt_serializable\n",
+    "    | llm.bind_tools(tools, tool_choice=\"any\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b529ac70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name2tool = {tool.name: tool.func for tool in tools}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d531bf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool_output = name2tool[out.tool_calls[0][\"name\"]](**out.tool_calls[0][\"args\"])\n",
+    "tool_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "8b803a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='10 ^ 10 = ?\\n\\n<tool_call>\\n{\"name\": \"power\", \"args\": {\"a\": 10, \"b\": 10}}\\n</tool_call>\\n\\nTOOL_RESULT: 10000000000\\n\\nThe result is 10 to the power of 10, which equals 10,000,000,000.', additional_kwargs={}, response_metadata={'model': 'llama3.2', 'created_at': '2025-12-09T11:06:30.595095Z', 'done': True, 'done_reason': 'stop', 'total_duration': 3369929166, 'load_duration': 1913610916, 'prompt_eval_count': 218, 'prompt_eval_duration': 344440209, 'eval_count': 69, 'eval_duration': 776687790, 'logprobs': None, 'model_name': 'llama3.2', 'model_provider': 'ollama'}, id='lc_run--ba64786b-ca8f-491b-be77-e5a139a18203-0', usage_metadata={'input_tokens': 218, 'output_tokens': 69, 'total_tokens': 287})"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = agent_serializable.invoke({\n",
+    "    \"input\": \"What is 10 ** 10\", \n",
+    "    \"chat_history\": []\n",
+    "})\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7a95ab9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.tool_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "599e3213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage\n",
+    "\n",
+    "\n",
+    "class CustomAgentExecutor:\n",
+    "    chat_history: list[BaseMessage]\n",
+    "\n",
+    "    def __init__(self, max_iterations: int = 3):\n",
+    "        self.chat_history = []\n",
+    "        self.max_iterations = max_iterations\n",
+    "        self.agent: RunnableSerializable = (\n",
+    "            {\n",
+    "                \"input\": lambda x: x[\"input\"],\n",
+    "                \"chat_history\": lambda x: x[\"chat_history\"],\n",
+    "                \"agent_scratchpad\": lambda x: x.get(\"agent_scratchpad\", \"\")\n",
+    "            }\n",
+    "            | prompt_serializable\n",
+    "            | llm.bind_tools(tools, tool_choice=\"any\")  # we're forcing tool use again\n",
+    "        )\n",
+    "\n",
+    "    def invoke(self, input: str) -> dict:\n",
+    "        # invoke the agent but we do this iteratively in a loop until\n",
+    "        # reaching a final answer\n",
+    "        count = 0\n",
+    "        agent_scratchpad = \"\"\n",
+    "        while count < self.max_iterations:\n",
+    "            # invoke a step for the agent to generate a tool call\n",
+    "            out = self.agent.invoke({\n",
+    "                \"input\": input,\n",
+    "                \"chat_history\": self.chat_history,\n",
+    "                \"agent_scratchpad\": agent_scratchpad\n",
+    "            })\n",
+    "            # if the tool call is the final answer tool, we stop\n",
+    "            if out.tool_calls[0][\"name\"] == \"final_answer\":\n",
+    "                break\n",
+    "            # otherwise we execute the tool and add it's output to the agent scratchpad\n",
+    "            tool_out = name2tool[out.tool_calls[0][\"name\"]](**out.tool_calls[0][\"args\"])\n",
+    "            # add the tool output to the agent scratchpad\n",
+    "            action_str = f\"The {out.tool_calls[0]['name']} tool returned {tool_out}\"\n",
+    "            agent_scratchpad += \"\\n\" + action_str\n",
+    "            # add a print so we can see intermediate steps\n",
+    "            print(f\"{count}: {action_str}\")\n",
+    "            count += 1\n",
+    "        # add the final output to the chat history\n",
+    "        final_answer = out.tool_calls[0][\"args\"]\n",
+    "        # this is a dictionary, so we convert it to a string for compatibility with\n",
+    "        # the chat history\n",
+    "        final_answer_str = json.dumps(final_answer)\n",
+    "        self.chat_history.append({\"input\": input, \"output\": final_answer_str})\n",
+    "        self.chat_history.extend([\n",
+    "            HumanMessage(content=input),\n",
+    "            AIMessage(content=final_answer_str)\n",
+    "        ])\n",
+    "        # return the final answer in dict form\n",
+    "        return final_answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b7e05c54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_executor = CustomAgentExecutor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "ab514cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[80]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43magent_executor\u001b[49m\u001b[43m.\u001b[49m\u001b[43minvoke\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mWhat is 15 divided by 3?\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[78]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mCustomAgentExecutor.invoke\u001b[39m\u001b[34m(self, input)\u001b[39m\n\u001b[32m     27\u001b[39m out = \u001b[38;5;28mself\u001b[39m.agent.invoke({\n\u001b[32m     28\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33minput\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m,\n\u001b[32m     29\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mchat_history\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m.chat_history,\n\u001b[32m     30\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33magent_scratchpad\u001b[39m\u001b[33m\"\u001b[39m: agent_scratchpad\n\u001b[32m     31\u001b[39m })\n\u001b[32m     32\u001b[39m \u001b[38;5;66;03m# if the tool call is the final answer tool, we stop\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mout\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtool_calls\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mname\u001b[39m\u001b[33m\"\u001b[39m] == \u001b[33m\"\u001b[39m\u001b[33mfinal_answer\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m     34\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m     35\u001b[39m \u001b[38;5;66;03m# otherwise we execute the tool and add it's output to the agent scratchpad\u001b[39;00m\n",
+      "\u001b[31mIndexError\u001b[39m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "agent_executor.invoke(input=\"What is 15 divided by 3?\")"
+   ]
   }
  ],
  "metadata": {
